--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnpA2xdFtOc5y3z0nVqGsI",
+      "authorship_tag": "ABX9TyM24ZGJ6OI4v5PM2VkqcYxR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -350,7 +350,7 @@
       "metadata": {
         "id": "PCVsliTY-3u9"
       },
-      "execution_count": 66,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -362,10 +362,172 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Use a lambda function in Python to sort a list of tuples based on the second element of each tuple"
+      ],
+      "metadata": {
+        "id": "9nMC4AGc_Yfe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = [(1, 3), (4, 1), (2, 2), (5, 0)]\n",
+        "sorted_data = sorted(data, key=lambda x: x[1])\n",
+        "print(sorted_data)\n"
+      ],
+      "metadata": {
+        "id": "yZtGJdhH_dgP",
+        "outputId": "22817f47-9f0f-4aed-b6a3-aea2970084e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[(5, 0), (4, 1), (2, 2), (1, 3)]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ". Write a Python program that uses `map()` to convert a list of temperatures from Celsius to Fahrenheit"
+      ],
+      "metadata": {
+        "id": "sW4XLFIF_uBx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "celsius = [0, 10, 20, 30, 40]\n",
+        "fahrenheit = list(map(lambda c: (c * 9/5) + 32, celsius))\n",
+        "print(fahrenheit)\n"
+      ],
+      "metadata": {
+        "id": "WWAvNj_3_yXf",
+        "outputId": "f51ed772-515a-44a8-dd5f-5874213f6c67",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[32.0, 50.0, 68.0, 86.0, 104.0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
         "id": "FgYwXIYqVHH7"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Create a Python program that uses `filter()` to remove all the vowels from a given string."
+      ],
+      "metadata": {
+        "id": "4G8Pf8yPBl-d"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def remove_vowels(input_str):\n",
+        "    return ''.join(filter(lambda ch: ch.lower() not in 'aeiou', input_str))\n",
+        "\n",
+        "text = \"Hello World\"\n",
+        "result = remove_vowels(text)\n",
+        "print(result)\n"
+      ],
+      "metadata": {
+        "id": "cAr35TrzBg4q",
+        "outputId": "02f0f09d-eba4-465d-fa33-3ac42f5aab66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hll Wrld\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ") Imagine an accounting routine used in a book shop. It works on a list with sublists, which look like this:\n",
+        " Write a Python program, which returns a list with 2-tuples. Each tuple consists of the order number and the\n",
+        "product of the price per item and the quantity. The product should be increased by 10,- € if the value of the\n",
+        "order is smaller than 100,00 €.\n",
+        " Write a Python program using lambda and map"
+      ],
+      "metadata": {
+        "id": "8JNDqImPC2-t"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "orders = [\n",
+        "    [\"34587\", \"Learning Python, Mark Lutz\", 4, 40.95],\n",
+        "    [\"98762\", \"Programming Python, Mark Lutz\", 5, 56.80],\n",
+        "    [\"77226\", \"Head First Python, Paul Barry\", 3, 32.95],\n",
+        "    [\"88112\", \"Einführung in Python3, Bernd Klein\", 3, 24.99]\n",
+        "]\n",
+        "\n",
+        "result = list(map(lambda order: (\n",
+        "    order[0],\n",
+        "    round(order[2] * order[3] + 10 if order[2] * order[3] < 100 else order[2] * order[3], 2)\n",
+        "), orders))\n",
+        "\n",
+        "print(result)\n"
+      ],
+      "metadata": {
+        "id": "Lo-7cixDDEUd",
+        "outputId": "32be339a-3019-4694-d807-3ed3f693b7bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('34587', 163.8), ('98762', 284.0), ('77226', 108.85), ('88112', 84.97)]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vmoDtMCbC49g"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
